--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ header {
 </head>
 <body>
   <header>
-    <a href="https://imgur.com/DrEC9cf"><img src="https://i.imgur.com/DrEC9cf.png" title="Aune Thorsen" 
-                                             width="60" class="logo" alt="logo"/></a>
+    <!-- <a href="https://imgur.com/DrEC9cf"><img src="https://i.imgur.com/DrEC9cf.png" title="Aune Thorsen" 
+                                             width="60" class="logo" alt="logo"/></a> -->
      <a><img id="hlogo" src="https://i.imgur.com/61CZKNA.png" alt="hlogo" class="hlogo"
                                              width=70/></a>
     <h1 id="tittel" class="tittel" alt="tittel">‎ ‎ ‎ ‎ ‎ ‎ Hinduisme</h1>
