--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 
-<html translate="no">
+<html>
 <head>
-  <title>Hinduisme - Aune Thorsen</title>
   <style>
       #supd {
     font-size: 8px;
   }
+    #aune {
+    font-size: 8px;
+  }
       #kilde {
-      font-size: 10px;
+      font-size: 13px;
     }
     body {
       font-family: Arial, sans-serif;
@@ -112,16 +114,40 @@ header {
   </section>
   <section>
     <h2 id="ritualer">Ritualer</h2>
-<p>Hent info fra: https://no.wikipedia.org/wiki/Hinduisme</p>
+<p>For de fleste hinduer er de daglige ritualene viktigere enn å spekulere i metafysiske spørsmål. Hinduismen handler mer om handling enn tro. Mange hinduer har bilder eller statuer av guddommer hjemme, og de gir dem røkelse, blomster osv. Det heter puja og det kan føre til å oppleve guddommelig nærvær.</p>
+      <h3>Kilder brukt:</h3>
+  <ul>
+    <li> <a href="https://no.wikipedia.org/wiki/Hinduisme#Ritualer">Ritualer - Wikipedia</a>
+   </ul>
   </section>
   <section>
     <h2 id="filosofi">Filosofi</h2>
-    <p>Hent info fra: https://snl.no/hinduistiske_filosofiskoler<p/>
+    <p>Hinduistiske filosofi utviklet på det indiske subkontinentet gjennom mange år. Virkelighetens grunnleggende egenskaper, kunnskap, logikk og etikk. De er knyttet til hinduismen, buddhismen og jainismen.  Målet er å oppnå frigjøring fra å bli født og dø<p/>
+          <h3>Kilder brukt:</h3>
+  <ul>
+    <li> <a href="https://no.wikipedia.org/wiki/Hinduisme#Ritualer">Filosofi - Snl</a>
+   </ul>
     </form>
   </section>
   <section>
+            <a href="https://cdn.discordapp.com/attachments/1201899439942279178/1201899476676268082/NjCGyou.png?ex=65cb7f1d&is=65b90a1d&hm=01f17dcea5af3cd48100f6fd4959509687c0c3df596b210d1aaaf3f195c17012&"><img src="https://i.imgur.com/qpaafDX.png" title="source: imgur.com" alt="Karmating" class="guddommer"
+                                             width="150"/></a>
     <h2 id="karma">Karma</h2>
-    <p>Hent info fra: https://snl.no/karma</p>
+    <h3>Karma og gjenfødsel</h3>
+    <p>Karma er en del av læren om gjenfødelse i indiske religioner. Konsekvenser av handlinger gjort mot andre som vi ikke opplever konsekvensene av i dette livet, vil gå videre til neste liv. I indisk religion er det livet som vi lever nå, bare et i en rekke liv. Alle som lever, har levd mange liv tidligere, og de fleste vil leve mange liv etter dette. Rekken av gjenfødsler kalles samsara og har en negativ konnotasjon. Det endelige målet er å unnslippe samsara.
+
+Karma dreier seg om virkninger handlinger kan ha. Handlinger vurderes som gode, nøytrale eller dårlige etter hva slags karmiske konsekvenser de får. Ifølge dette trosbildet avhenger det neste livet av hvordan personen har levd i dette livet og behandlet andre, både guder, andre mennesker og naturen. Gode handlinger gir karma som fører til et bedre liv, mens dårlige handlinger gir karma som fører til et verre liv. Et bedre liv kan bety gjenfødelse i en guddommelig himmel, et verre liv gjenfødelse i et helvete. Opphold i en himmel eller et helvete er bare midlertidige.</p>
+    <h3>Frelse fra gjenfødelse</h3>
+    <p>Gjenfødelse er i indisk religion for det meste blitt sett på som noe negativt. Religionens mål var frihet fra karma og gjenfødelse. Siden karma er det som binder oss til gjenfødelse, blir karma et hovedproblem. Indisk religion foreslår flere løsninger på problemet.
+
+Fordi karma er et resultat av aktivitet, var et svar på å unngå karma å avstå fra all handling. I shramana-tradisjonene, som jainismen og buddhismen var del av, ble utmelding av samfunnet sett på som essensielt for å oppnå frihet fra karma. Å oppnå frelse var en fulltidssyssel som munk eller nonne.
+
+Karma-begrepet er et av Indias viktigste bidrag til menneskehetens religiøse fellesarv og er sentralt i alle indiske religioner. Men det er ulike fortolkninger.</p>
+           <h3>Kilder brukt:</h3>
+      <ul>
+    <li> <a href="https://snl.no/karma">Karma - Snl</a>
+   </ul>
+    <p>Alt info i Karma er direkte kopiert fra Snl</p>
   </section>
   <section>
     <h2 id="kilder">Kilder<h2>
@@ -132,7 +158,8 @@ header {
       </ul>
   </section>
   <footer>
-     <p id="supd" class="supd">Sist oppdatert 1/31/24</p>
+     <p id="supd" class="supd">Sist oppdatert 2/12/24</p>
+    <p id="aune" class="aune">Aune Thorsen</p>
   </footer>
 </body>
 </html>
