--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@ header {
   </section>
   <section>
     <h2 id="ritualer">Ritualer</h2>
-<p>For de fleste hinduer er de daglige ritualene viktigere enn å spekulere i metafysiske spørsmål. Hinduismen handler mer om handling enn tro. Mange hinduer har bilder eller statuer av guddommer hjemme, og de gir dem røkelse, blomster osv. Det heter puja og det kan føre til å oppleve guddommelig nærvær.</p>
+<p>De fleste hinduer har daglige ritualer som er viktigere enn å spekulere i metafysiske spørsmål. Hinduismen handler mer om handling enn tro. Mange hinduer har bilder eller statuer av guddommer hjemme, og de gir dem røkelse, blomster osv. Det heter puja og det kan føre til å oppleve guddommelig nærvær.</p>
+<p>
+En stor del av hinduisk praksis er yoga. Noen hinduer dedikerer hele livet til åndelig søken ved å gå inn i en av de mange munkeordnene tidlig i livet, men tradisjonelt har slike anstrengelser tilhørt siste del av livet. Slike asketer kalles sadhuer og nyter stor respekt i det indiske samfunnet.</p>
+<p>
+De vediske skriftene og de påfølgende tradisjonene som ble utviklet på det indiske subkontinentet gjennom århundrene, utforsker den kosmiske orden, de grunnleggende egenskapene ved virkeligheten, kunnskap, logikk og etikk.De skolene er koblet til hinduismen, buddhismen og jainismen og deler et felles mål om å oppnå frigjøring fra å bli født og dø.</p>
       <h3>Kilder brukt:</h3>
   <ul>
     <li> <a href="https://no.wikipedia.org/wiki/Hinduisme#Ritualer">Ritualer - Wikipedia</a>
