--- a/index.html
+++ b/index.html
@@ -167,3 +167,6 @@ Karma-begrepet er et av Indias viktigste bidrag til menneskehetens religiøse fe
   </footer>
 </body>
 </html>
+    <p class="disablecopypaste">
+This text can’t be copied (cannot be selected).
+</p>
