--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Hinduismen-En-Oppgave</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -126,10 +136,10 @@ De vediske skriftene og de påfølgende tradisjonene som ble utviklet på det in
   </section>
   <section>
     <h2 id="filosofi">Filosofi</h2>
-    <p>Hinduistiske filosofi utviklet på det indiske subkontinentet gjennom mange år. Virkelighetens grunnleggende egenskaper, kunnskap, logikk og etikk. De er knyttet til hinduismen, buddhismen og jainismen.  Målet er å oppnå frigjøring fra å bli født og dø<p/>
+    <p>Hinduistiske filosofi utviklet på det indiske subkontinentet gjennom mange år. Indisk filosofi inneholder lærer om verdensordningen, verdens og virkelighetens grunnleggende egenskaper, kunnskapens vesen, logikk og etikk. Det er knyttet til relgionene hinduismen, buddhismen og jainismen. Målet deres er å oppnå kunnskap som bringer moksha fra verden og gjenfødelsen.<p/>
           <h3>Kilder brukt:</h3>
   <ul>
-    <li> <a href="https://no.wikipedia.org/wiki/Hinduisme#Ritualer">Filosofi - Snl</a>
+    <li> <a href="https://snl.no/hinduistiske_filosofiskoler">Filosofi - Snl</a>
    </ul>
     </form>
   </section>
@@ -165,5 +175,10 @@ Karma-begrepet er et av Indias viktigste bidrag til menneskehetens religiøse fe
      <p id="supd" class="supd">Sist oppdatert 2/12/24</p>
     <p id="aune" class="aune">Aune Thorsen</p>
   </footer>
+</body>
+</html>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
 </body>
 </html>
