--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Hinduismen En Oppgave</title>
+  <title>Hinduismen En Oppgave - Aune Thorsen</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -13,86 +13,16 @@
 <html>
 <head>
   <style>
-      #supd {
-    font-size: 8px;
-  }
-    #aune {
-    font-size: 8px;
-  }
-      #kilde {
-      font-size: 13px;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 10px;
-      text-align: center;
-    }
-    nav {
-      background-color: #555;
-      color: #fff;
-      padding: 10px;
-      text-align: center;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      padding: 10px;
-    }
-    section {
-      margin: 20px;
-      padding: 20px;
-      background-color: #fff;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    }
-    footer {
-      background-color: #333;
-      color: #fff;
-      padding: 10px;
-      text-align: center;
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-    }
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
   </style>
-<style>
-logo {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-}
-header {
-  position: relative;
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
-}
-.guddommer {
-  float: right;
-}
-.supd {
-  border: none;
-  border-top: 0px solid white;
-}
-</style>
 </head>
 <body>
   <header>
     <!-- <a href="https://imgur.com/DrEC9cf"><img src="https://i.imgur.com/DrEC9cf.png" title="Aune Thorsen" 
                                              width="60" class="logo" alt="logo"/></a> -->
-     <a><img id="hlogo" src="https://i.imgur.com/61CZKNA.png" alt="hlogo" class="hlogo"
+     <a><img id="hlogo" src="./61CZKNA.png " alt="hlogo" class="hlogo"
                                              width=70/></a>
-    <h1 id="tittel" class="tittel" alt="tittel">‎Hinduisme</h1>
+    <h1 id="tittel" class="tittel" alt="tittel">‎Hinduismen</h1>
   </header>
   <nav>
     <a href="#guder">Guder</a>
@@ -102,8 +32,8 @@ header {
   </nav>
   <section>
     <h2 id="guder">Guder</h2>
-    <a href="https://cdn.discordapp.com/attachments/1201899439942279178/1201899476676268082/NjCGyou.png?ex=65cb7f1d&is=65b90a1d&hm=01f17dcea5af3cd48100f6fd4959509687c0c3df596b210d1aaaf3f195c17012&"><img src="https://i.imgur.com/NjCGyou.png" title="source: imgur.com" alt="Guddommer" class="guddommer"
-                                             width="150"/></a>
+    <img src="./standard_compressed_hinduismen1.jpg" title="source: imgur.com" alt="Guddommer" class="guddommer"
+                                             width="150"/>
     <p>Det er 33 guder i Hinduismen ifølge <a href="https://historienet.no/samfunn/religionshistorie/hinduisme-alt-om-karma-dharma-og-indias-330-millioner-guder">Historienet.no</a>. De viktigste er Brahma, Vishnu, og Shiva. De representerer skapelse, bevaring, og ødeleggelse. </p>
     <h3>Shiva - Ødeleggeren</h3>
     <p>Shiva er en viktig gud i Hinduismen. Shiva er assosiert med ødeleggelse. Shiva har Blå hud, en slange rundt halsen og 3 øyer. Det 3 øye symboliserer visdom. Maha Shivaratri er en festival som feirer at Shiva og Parvati gifter seg, festivalen feires 8. mars hvert år.</p>
@@ -131,8 +61,8 @@ header {
     </form>
   </section>
   <section>
-            <a href="https://cdn.discordapp.com/attachments/1201880474469793854/1206596349504520252/qpaafDX.png?ex=65dc956b&is=65ca206b&hm=4a6d2a8defbc081af87669372f5699d931e3e6bb415cb733f4d29fc7cd20265b&"><img src="https://i.imgur.com/qpaafDX.png" title="" alt="Karmating" class="guddommer"
-                                             width="150"/></a>
+            <img src="./360_F_251340261_bcSGANuMjebuYGRsWF3VOmBEDpsX54BX.jpg" title="" alt="Karmating" class="guddommer"
+                                             width="150"/>
     <h2 id="karma">Karma</h2>
     <h3>Ritualer</h3>
     <p>De fleste hinduer har daglige ritualer som er viktigere enn å spekulere i metafysiske spørsmål. Hinduismen handler mer om handling enn tro. Mange hinduer har bilder eller statuer av guddommer hjemme og de gir dem røkelse, blomster osv. Det heter puja og det kan føre til å oppleve guddommelig nærvær.</p>
@@ -158,7 +88,7 @@ De vediske skriftene og de påfølgende tradisjonene som ble utviklet på det in
   <section>
     <h2 id="kilder">Kilder<h2>
       <ul>
-      <li id="kilde">historienet.no/</li>
+      <li id="kilde">historienet.no</li>
       <li id="kilde">snl.no
       <li id="kilde">wikipedia.org
       </ul>
